src/App.css
/* ........Font import---- */

@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");




/* --------banner------- */

.banner {
  position: relative;
}

.banner .slick-dots {
  display: flex !important;
  gap: 12px;
  position: absolute;
  bottom: 30px;
  left: 50%;
  transform: translateX(-50%);
}

.banner .slick-dots li button {
  font-size: 0;
  width: 8px;
  height: 8px;
  border: 1px solid #111827;
  border-radius: 50%;
}

.banner .slick-dots .slick-active button {
  background: #111827;
}



/* ................Exploring css--- */

.expo {
  position: relative;
}

.expo .slick-dots {
  display: flex !important;
  gap: 12px;
  position: absolute;
  bottom: -40px;
  left: 50%;
  transform: translateX(-50%);
}

.expo .slick-dots li button {
  font-size: 0;
  width: 8px;
  height: 8px;
  background: var(--color-secoundary);
  border-radius: 50%;
}

.expo .slick-dots .slick-active button {
  background: #111827;
}

.dark .expo .slick-dots .slick-active button {
  background: white;
}

